<resources>
    <string name="app_name">B.TechQuiz</string>
    <string name="get_ready_to_get_placed">GET READY TO GET PLACED</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="dashboard">Dashboard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="b_tech_quiz">B.Tech Quiz</string>
    <string name="login_page"><u>LOGIN PAGE</u></string>
    <string name="enter_mail_id">Enter Mail Id</string>
    <string name="enter_password">Enter Password</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="sign_up_now"><u>Register Now</u></string>
    <string name="login">LOGIN</string>
    <string name="register_page"><u>REGISTER PAGE</u></string>
    <string name="enter_username">Enter Username</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_google_id">332768448266-gckfm559u8rchcp87e58q2ih7n63lo1l.apps.googleusercontent.com</string>
    <string name="login_now"><u>Login Now</u>></string>
    <string name="password_should_contain">Password should contain:</string>
    <string name="minimum_one_uppercase">Minimum one uppercase</string>
    <string name="at_least_8_characters">At least 8 characters</string>
    <string name="minimum_one_symbol">Minimum one symbol</string>
    <string name="minimum_one_number">Minimum one number</string>
    <string name="register">REGISTER</string>
    <string name="logout">Logout</string>
    <string name="login_with_google">Login With Google</string>
    <string name="na">NA</string>
    <string name="default_email">null</string>
    <string name="clear">CLEAR</string>
    <string name="mark_for_review">MARK FOR REVIEW</string>
    <string name="next">NEXT</string>
    <string name="best_score">Best Score</string>
    <string name="test_time">Test Time</string>
    <string name="start">START</string>
    <string name="category">Category</string>
    <string name="test_no_1">Test No. 1</string>
    <string name="questions">Questions</string>
    <string name="_10">10</string>
    <string name="_70">70</string>
    <string name="_20_min">20 min</string>
    <string name="finish">FINISH</string>
    <string name="answered">Answered</string>
    <string name="not_answered">Not Answered</string>
    <string name="not_visited">Not Visited</string>
    <string name="review">Review</string>
    <string name="exit_test"><u>FINISH TEST</u></string>
    <string name="do_you_want_to_exit_the_test">Do you want to finish the test ?</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="you_scored">You Scored : </string>
    <string name="_100">100</string>
    <string name="_23_41"> 23:41</string>
    <string name="time_taken">Time Taken :</string>
    <string name="statistics"><u>STATISTICS</u></string>
    <string name="total_questions">Total Questions</string>
    <string name="_5">5</string>
    <string name="correct_answers">Correct Answers</string>
    <string name="unattempted">Unattempted</string>
    <string name="rank_in_leaderboard">Rank In Leaderboard</string>
    <string name="view_answers">VIEW ANSWERS</string>
    <string name="re_attempt">RE-ATTEMPT</string>
    <string name="incorrect_answers">Incorrect Answers</string>
    <string name="overall_rankings">OVERALL RANKINGS</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="discussion">Discussion</string>
    <string name="contests">Contests</string>
    <string name="upcoming">Upcoming</string>
    <string name="choose_image_for_photo">Choose Image For Photo</string>
    <string name="save_new_name">Save Image</string>
    <string name="save_name">SAVE NAME</string>
</resources>