<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialogConstraint"
    tools:viewBindingIgnore="true"
    android:padding="16dp"
    android:background="@drawable/loginfloral"
    android:layout_margin="35dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/title"
    android:textStyle="bold"
    android:textColor="@color/black"
    android:text="@string/exit_test"
    android:textSize="25sp"
    android:layout_marginTop="8dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/do_you_want_to_exit_the_test"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_marginTop="35dp"
        android:id="@+id/cancel"
        android:layout_marginStart="35dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:backgroundTint="@color/design_default_color_primary"
        android:background="@drawable/edittext_back"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="@color/design_default_color_primary"
        android:id="@+id/yes"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:background="@drawable/edittext_back"/>
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:id="@+id/divider"
        android:layout_marginStart="65dp"
        android:background="?android:attr/listDivider"
        android:layout_marginEnd="65dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>

</androidx.constraintlayout.widget.ConstraintLayout>