<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/scoreScroll"
    android:background="@drawable/loginfloral"
    android:layout_height="match_parent"
    tools:context=".view.ScoreActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ScoreActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edittext_back"
        android:elevation="7dp"
        android:backgroundTint="#A0BFDA"
        android:id="@+id/scoreLinear"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/you_scored"
    android:textSize="35sp"
    android:textStyle="bold"
    android:textColor="@color/black" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_100"
        android:layout_marginStart="10dp"
        android:id="@+id/finalScore"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittext_back"
        android:elevation="7dp"
        android:id="@+id/timeLinear"
        android:backgroundTint="#A0BFDA"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/scoreLinear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_taken"
        android:textSize="25sp"
        android:id="@+id/timeLine"
        android:textStyle="bold"
        android:textColor="#3E2532"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_23_41"
        android:id="@+id/scoreTime"
        android:layout_marginStart="10dp"
        android:textColor="#3E2532"
        android:textStyle="bold"
        android:textSize="25sp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statistics"
        android:textStyle="bold"
        android:id="@+id/stats"
        android:textSize="27sp"
        android:textColor="@color/red"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/timeLinear"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/total"
        android:textColor="@color/darkGrey"
        android:text="@string/total_questions"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/stats"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:id="@+id/scoreId"
        android:textColor="@color/darkGrey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginEnd="30dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:id="@+id/statsLinear"
        app:layout_constraintTop_toBottomOf="@id/scoreId"
        android:orientation="vertical"
        android:elevation="7dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/correctAns"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="@color/green"
               app:layout_constraintTop_toTopOf="parent"
                android:text="@string/correct_answers"
                android:textStyle="bold"
                android:textSize="15sp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/tick"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/correctAns"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/rightAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginEnd="75dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:id="@+id/inAns"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/incorrect_answers"
                android:textStyle="bold"
                android:textSize="15sp"/>
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:layout_constraintLeft_toRightOf="@id/inAns"
                android:src="@drawable/cross"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/incorrectAns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textColor="@color/red"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginEnd="75dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="7dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textColor="@color/black"
                android:id="@+id/unatAns"
                android:text="@string/unattempted"
                android:textStyle="bold"
                android:textSize="15sp"/>
            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                app:layout_constraintLeft_toRightOf="@id/unatAns"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/questionmark"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:id="@+id/unAttemptedAns"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="20"
                android:textSize="15sp"
               android:layout_marginEnd="75dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_answers"
        android:textStyle="bold"
        android:id="@+id/answers"
        android:textColor="@color/white"
        android:background="@color/purple_500"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="7dp"
        android:translationZ="3dp"
        app:layout_constraintTop_toBottomOf="@id/statsLinear"
        android:layout_marginTop="50dp"/>





</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>