<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="viewmodel"
            type="com.example.btechquiz.viewmodel.ProfileViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginfloral">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    <androidx.cardview.widget.CardView
        android:id="@+id/myCardView"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/roundedImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_person_24" />
    </androidx.cardview.widget.CardView>
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/nameEdit"
         android:layout_gravity="center"
         android:textSize="18sp"
         android:textColorHint="@color/darkGrey"
         android:textColor="@color/darkGrey"
         android:textStyle="bold"
         android:inputType="textEmailAddress"/>
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/emailText"
          android:layout_gravity="center"
          android:textColor="@color/black"
          android:textStyle="bold"
          android:textSize="18sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgBtn"
            android:layout_gravity="center"
            android:text="@string/choose_image_for_photo"
            android:layout_marginTop="40dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn"
            android:text="@string/save_new_name"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveName"
            android:text="@string/save_name"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"/>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>