<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activityDrawer">
    <include layout="@layout/activity_questions"
        android:id="@+id/includeDrawer"/>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_gravity="end"
    >
    
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/ansMark"
        android:src="@drawable/greencir"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        android:text="@string/answered"
        android:id="@+id/ansText"
        app:layout_constraintLeft_toRightOf="@id/ansMark"
        app:layout_constraintTop_toTopOf="parent"
       android:layout_marginTop="22dp"
        android:layout_marginStart="10dp"/>
    <ImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/unAnsMark"
        android:src="@drawable/redcir"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ansText"
        android:layout_margin="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#DF1010"
        android:text="@string/not_answered"
        android:id="@+id/unAnsText"
        app:layout_constraintLeft_toRightOf="@id/unAnsMark"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="23dp"
        android:layout_marginStart="8dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/visitedMark"
        android:src="@drawable/greycir"
        app:layout_constraintTop_toBottomOf="@id/ansMark"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#313231"
        android:text="@string/not_visited"
        android:id="@+id/visitedText"
        app:layout_constraintLeft_toRightOf="@id/visitedMark"
        app:layout_constraintTop_toBottomOf="@id/ansText"
        android:layout_marginTop="32dp"
        android:layout_marginStart="10dp"/>
    <ImageView
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:id="@+id/reviewMark"
        android:src="@drawable/bluecir"
       app:layout_constraintTop_toBottomOf="@id/unAnsMark"
        app:layout_constraintLeft_toRightOf="@id/visitedText"
        android:layout_margin="18dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#2736BD"
        android:text="@string/review"
        android:id="@+id/reviewText"
        app:layout_constraintLeft_toRightOf="@id/reviewMark"
        app:layout_constraintTop_toBottomOf="@id/unAnsText"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"/>
    <View
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:id="@+id/divider"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reviewMark"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/reviewRecycler"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.drawerlayout.widget.DrawerLayout>